--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <a href="https://www.youtube.com/@BhuanaTara" class="a-content">
           <img src="123.png" class="img-content" />
           <p>BHUANA TARA PRODUCTIONS</p>
+          <!-- ini dari java script -->
+          <div id="biodata" ></div>
+          <!-- data end javascript -->
         </a>
       </div>
       <!-- CONTENT 1 END  -->
@@ -36,5 +39,6 @@
       </div>
       <!-- FOOTER END -->
     </div>
+    <script src="data.js" type="text/javascript" />
   </body>
 </html>
